# I4Talent_course_practice

./: .gitignore  README.md  pyproject.toml
.virtual_documents/notebooks/: Untitled.ipynb
